* Refactored initialization logic of ProjectTarget into Project. ProjectTarget
  is now free of any SchemeHandler logic.
* Download methods of util, HttpSchemeHandler and MvnSchemeHandler set an 
  SBuild specific user agent. This fixed 403 Forbidden issues for some Maven
  repositories (e.g. Central).
* Updated dependencies: Jansi 1.11, CmdOption 0.3.1
* Added new cmdline option --jobs to configure the number of targets to run in
  parallel.
* Improved error handling for parallel builds. A failed target now fails the
  complete build instantly.

SBuild 0.5.0 - 2013-07-12:

* Updated dependencies: Scala 2.10.2, Jansi 1.10.
* Added support to reference scheme handlers of other projects/modules.
* Added parameters useArgsFile, jvmArgs and sourcePath to Scalac addon.
* Added Scalac.scalaClasspath(version) classpath factory.
* Fix FileNotFoundException in execution of cacheable targets with path
  separators in it's name.
* Allow to evict caches per cacheable target.
* Huge speed up in up-to-date detection algorithm.
* Added SchemeHandler.replace method to make the intend to replace a already
  registered scheme handler explicit (and checked).
* New MapperSchemeHandler to translate schemes and/or pathes, to be used in
  "source" and "javadoc" scheme.
* New experimental default schemes "source" and "javadoc", that will try to
  provided sources and javadoc for any given dependency, e.g. 
  "source:mvn:a.b.1" will be translated to "mvn:a.b.1;classifier=sources"
* Fixed --fsc option.
* Fixed colored output under windows.
* Bash Completion support.
* BndJar addon creates now the target directory, if it does not exists.
* New experimental scheme handler to access 'val's and 'def's in projects in
  new project de.tototec.sbuild.experimental.
* Added mechanism to locate files relative to included scala files, via
  Path[Config]("path/relative/to/Config.scala").
* Removed deprecated code: IfNotUpToDate, PersistentUpToDateChecker. Their